fix: handle overflow email on welcome page

--- a/src/components/auth-forms/SignIn.scss
+++ b/src/components/auth-forms/SignIn.scss
@@ -13,13 +13,13 @@
     padding: 56px 75px;
   }
   @include media-tablet-660 {
-      padding: 45px 50px;
-      margin: 40px auto;
+    padding: 45px 50px;
+    margin: 40px auto;
   }
   @include media-mobile-450 {
-      margin: 10px auto;
-      padding: 30px 35px;
-      width: 100%;
+    margin: 10px auto;
+    padding: 30px 35px;
+    width: 100%;
   }
 
   &__title {
@@ -31,8 +31,8 @@
 
     margin-bottom: 30px;
     @include media-mobile-450 {
-        font-size: 20px;
-        line-height: 26px;
+      font-size: 20px;
+      line-height: 26px;
     }
   }
 
@@ -76,6 +76,7 @@
       height: 48px;
       background: $light-text-color;
       border-radius: 10px;
+      border: none;
 
       padding: 10px;
       margin: 5px 0;
@@ -132,19 +133,19 @@
   }
 
   &__text {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: $light-text-color;
+    text-align: center;
+
+    &_link {
       font-weight: 600;
       font-size: 16px;
       line-height: 22px;
-      color: $light-text-color;
-      text-align: center;
-
-      &_link {
-          font-weight: 600;
-          font-size: 16px;
-          line-height: 22px;
-          text-decoration-line: underline;
-          color: $primary-color;
-          margin-left: 10px;
-      }
+      text-decoration-line: underline;
+      color: $primary-color;
+      margin-left: 10px;
+    }
   }
 }
